# obsidian-assintant-rag

./: README.md  environment.env  main.py  pyproject.toml
app/: app.py
app/src/: advanced_chunking.py  advanced_retrieval.py  chunking.py  document_processor.py  embeddings.py  functions.py  groq_chat.py  markdown_processing.py  metadata_extractor.py  optimized_embeddings.py  performance_monitor.py  retrieval.py  vault_vectorize.py  vector_db.py  vectorizer.py
assets/: .gitkeep
assets/vector_db/: .gitkeep
